# rivulet-mcp-public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
gifs/: record.sh
rivulet/: _planner_wrapper.py  cli.py  mcp_server.py  models.py  planner.py  presets.py  throughput.py
tests/: test_mcp_tools.py
