[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivulet-mcp"
version = "0.1.0"
description = "MCP server and CLI for designing DEP microfluidics experiment protocols"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "anthropic>=0.80",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rivulet = "rivulet.cli:app"
rivulet-mcp = "rivulet.mcp_server:main"

[project.urls]
Homepage = "https://github.com/AsmayGharia/rivulet-mcp"
Issues = "https://github.com/AsmayGharia/rivulet-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["rivulet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
